@@ -1,6 +1,6 @@
 package interface_adapter.display_course_context;
 
-import use_case.display_course_context.DisplaySectionDetails;
+import use_case.display_course_context.display_course_details_data_transfer_objects.DisplaySectionDetails;
 
 import java.util.List;
 
@@ -39,7 +39,7 @@ public class DisplayCourseDetailsState {
      * @return true if errorMessage is not null and not empty, false otherwise.
      */
     public boolean isError() {
-        return errorMessage != null && !errorMessage.trim().isEmpty();
+        return errorMessage != null && !errorMessage.isBlank();
     }
 
 }
